# fetch

./: .gitignore  Makefile  Makefile.am  README  configure.ac
libfetch/: Makefile
libnbcompat/: autogen.sh
source/: Makefile.am  Makefile.in  autogen.sh  configure.ac  fetch.1  fetch.c
source/libfetch/: Makefile.am  common.c  common.h  fetch.c  fetch.h  file.c  ftp.c  http.c
source/libnbcompat/: Makefile.am  configure.ac
source/libnbcompat/nbcompat/: stdio.h
